# dpdk-exec

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  flake.nix  result
cmake/: try_add_nixpkg.cmake
include/dpdk-exec/: operation.hpp
nix/: dpdk-img.nix  external.nix  nixvirt.nix  qcow-config.nix  shell.nix  treefmt.nix  virt-scripts.nix
nix/vm-config/: attrs.nix  libvirt-xml.nix  nix-vm.nix
scripts/: df.sh
